@@ -1,4 +1,4 @@
-name: HungerGames
+name: MyHungerGames
 main: com.randude14.hungergames.HungerGames
 version: 0.5-dev
 authors: [Randude14, kitskub]
