@@ -47,6 +47,7 @@ v0.5
 - config options to limit the distance that players can hear each other
 - config option to allow players to receive minimal messages
 - config option to allow items to be deleted on the ground after a game ends
+- Fixed official name to "MyHungerGames" instead of "HungerGames"
 
 v0.4.3
 - Fixed nullpointerexception in getSpectating() for real this time
